added ComponentManager as Singeltone. Changed Sensors are objects now. Added include guard

--- a/MDK-ARM/usb_final.uvprojx
+++ b/MDK-ARM/usb_final.uvprojx
@@ -762,6 +762,16 @@
               <FileType>8</FileType>
               <FilePath>..\Custom\Ds18b20.cpp</FilePath>
             </File>
+            <File>
+              <FileName>ComponentsManager.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Custom\ComponentsManager.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ComponentsManager.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Custom\ComponentsManager.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
